--- a/myportfolio/src/index.css
+++ b/myportfolio/src/index.css
@@ -30,7 +30,7 @@ display:none
 }
 body {
 font-family: 'Poppins', sans-serif;
-background: var(--color-bg);
+background:#1f1f38;
 color: var(--color-white);
 line-height: 1.7;
 }
