--- a/myportfolio/src/components/header/header.css
+++ b/myportfolio/src/components/header/header.css
@@ -56,3 +56,12 @@ header{
 
  }
 
+ @media screen and(max-width: 1024px){
+   header{
+       height: 68vh;
+    }  
+ }
+  
+ @media screen and (max-width:600px){
+   
+ }
